Challenge#1/Kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: rule-name
  namespace: default
spec:
  rules:
  - host: hostname
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: backend-service
          servicePort: port-number
        path: /api/(.*)
